fixed spacing inbetween sections

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@
   padding: 1.5vmin;
   color: var(--text-color);
   font-size: 3.5vmin;
-  margin: 3vmin 0 1.5vmin 0;
+  margin: 5vmin 0 5vmin 0;
   border: 2px solid green;
   border-right: none;
 }
@@ -117,7 +117,7 @@
   flex-direction: row;
   width: 80%;
   background: var(--item-bg-color);
-  margin: 2vmin;
+  margin-bottom: 5vmin;
 }
 
 .about-content {
@@ -126,7 +126,7 @@
   width: 80%;
   background: var(--item-bg-color);
   color: var(--text-color);
-  margin: 5vmin;
+  margin-bottom: 5vmin;
   padding: 1.5vmin;
 }
 
@@ -162,6 +162,10 @@
   color: var(--text-color);
   font-size: 3vmin;
   padding: 1vmin 3vmin;
+}
+
+.last {
+  margin-bottom: 10vh;
 }
 
 .extra {
